resources/sass/components/_cosplay-grid.scss
.series-grid {
  display: grid;
  grid-gap: 20px 10px;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));

  .series {
    flex: 1 0 auto;
    width: 100%;
    cursor: pointer;
    user-select: none;

    &__image {
      height: 100%;
      width: 100%;
      max-height: 200px;
      border: 1px solid rgba(0,0,0,0.15);
      border-bottom: none;

      & img {
        height: 100%;
        width: 100%;
        max-height: 200px;
        object-fit: contain;
      }
    }
  
    &__title {
      background-color: $blue;
      color: white;
      display: flex;
      flex-direction: row;

      &__text {
        text-align: center;
        padding: 10px;
        width: 100%;
      }
    }

    &__icon {
      & a {
        height: 62px;
        line-height: 62px;

        & i {
          font-size: 1.8rem;
        }
      }
    }
  }
}

.character-grid {
  display: grid;
  grid-gap: 20px 10px;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));

  .character {
    width: 100%;
    cursor: pointer;
    user-select: none;

    &__image {
      height: 100%;
      width: 100%;
      max-height: 400px;
      border: 1px solid rgba(0,0,0,0.15);
      border-bottom: none;

      & img {
        height: 100%;
        width: 100%;
        max-height: 400px;
        object-fit: contain;
      }
    }
  
    &__name {
      background-color: $blue;
      color: white;
      display: flex;
      flex-direction: row;

      &__text {
        text-align: center;
        padding: 10px;
        width: 100%;
      }
    }

    &__icon {
      & a {
        height: 62px;
        line-height: 62px;

        & i {
          font-size: 1.8rem;
        }
      }
    }
  }
}

.outfit-grid {
  display: grid;
  grid-gap: 20px 10px;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

